[tool.poetry]
name = "poetry-project-1"
version = "0.1.0"
description = ""
authors = ["Niko-03 <ksveta10@mail.ru>"]
readme = "README.md"
packages = [{include = "poetry_project_1"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.6.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
